--- a/client/dashboard/package.json
+++ b/client/dashboard/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-iframe": "^1.8.0",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4"
   }
 }
