--- a/client/dashboard/package.json
+++ b/client/dashboard/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
-    "@shopify/polaris": "^3.20.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
@@ -18,6 +17,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
+    "socket.io-client": "^2.2.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.1",
-    "@types/react-router-dom": "^4.3.4"
+    "@types/react-router-dom": "^4.3.4",
+    "@types/socket.io-client": "^1.4.32"
   }
 }
