--- a/server/matchmaker/package.json
+++ b/server/matchmaker/package.json
@@ -14,17 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.469.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status-enum": "1.0.2",
     "internal-ip": "^4.3.0",
     "nocache": "^2.1.0",
-    "node-zookeeper-client": "0.2.3"
+    "node-zookeeper-client": "0.2.3",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
+    "@types/cors": "^2.8.5",
     "@types/express": "4.17.0",
     "@types/internal-ip": "^4.1.0",
     "@types/node-zookeeper-client": "0.2.6",
+    "@types/socket.io": "^2.1.2",
     "tslint": "5.17.0",
     "typescript": "3.5.1"
   }
