--- a/server/matchmaker/package.json
+++ b/server/matchmaker/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.469.0",
+    "aws-sdk": "^2.505.0",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status-enum": "1.0.2",
