--- a/server/tic-tac-toe/.vscode/launch.json
+++ b/server/tic-tac-toe/.vscode/launch.json
@@ -8,7 +8,12 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/index.js"
+      "program": "${workspaceFolder}/index.js",
+      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/babel-node",
+      "sourceMaps": true,
+      "env": {
+        "NODE_ENV": "development"
+      }
     }
   ]
 }
