--- a/server/tic-tac-toe/package.json
+++ b/server/tic-tac-toe/package.json
@@ -4,17 +4,20 @@
   "description": "Colyseus Server - Minimal example",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js",
-    "start-production": "node ./index.js"
+    "start": "nodemon --exec babel-node ./index.js",
+    "start-production": "babel-node ./index.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.505.0",
     "colyseus": "^0.9.3",
     "cors": "^2.8.5",
     "express": "^4.13.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "nodemon": "^1.17.3"
   }
 }
