--- a/server/matchmaker/package.json
+++ b/server/matchmaker/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "http-status-enum": "1.0.2",
     "internal-ip": "^4.3.0",
+    "interval-promise": "^1.3.0",
     "nocache": "^2.1.0",
     "node-zookeeper-client": "0.2.3",
     "socket.io": "^2.2.0"
