--- a/server/tic-tac-toe/.vscode/launch.json
+++ b/server/tic-tac-toe/.vscode/launch.json
@@ -7,13 +7,12 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/index.js",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/babel-node",
-      "sourceMaps": true,
-      "env": {
-        "NODE_ENV": "development"
-      }
-    }
+      "name": "Typescript",
+      "program": "${workspaceFolder}/src/index.ts",
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "outFiles": [
+          "${workspaceFolder}/build/**/*.js"
+      ]
+  }
   ]
 }
