- Add server status - Bug fix

--- a/client/dashboard/.env.production
+++ b/client/dashboard/.env.production
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://matchmaker-ALB-1113686460.ap-northeast-2.elb.amazonaws.com
-REACT_APP_CLIENT_URL=http://tic-tac-toe-client-1511928333.ap-northeast-2.elb.amazonaws.com
+REACT_APP_API_URL=http://matchmaker-ALB-1455234439.us-west-2.elb.amazonaws.com
+REACT_APP_CLIENT_URL=http://tic-tac-toe-client-ALB-1321010311.us-west-2.elb.amazonaws.com
